# cargo-generate

./: Cargo.toml
src/: git.rs
