[package]
name = "cargo-generate"
description = "cargo, make me a project"
version = "0.5.0"
authors = [
    "Ashley Williams <ashley666ashley@gmail.com>"
]
license = "MIT/Apache-2.0"
repository = "https://github.com/ashleygwilliams/cargo-generate"
readme = "README.md"
edition = "2018"

[dependencies]
cargo = { git = "https://github.com/toshiyuki-rs/cargo.git", version = ">=0.30" }
console = "0.6.1"
dialoguer = "0.1.0"
indicatif = "0.9.0"
quicli = "0.4"
git2 = { git = "https://github.com/toshiyuki-rs/git2-rs.git", version = ">=0.7.1" }
tempfile = "3.0.2"
regex = "1.0.0"
heck = "0.3.0"
liquid = "0.19.0"
liquid-derive = "0.19"
walkdir = "2.1.4"
remove_dir_all = "0.5.1"
ignore = "0.4.3"
openssl = { git = "https://github.com/toshiyuki-rs/rust-openssl.git", optional = true }
url = "2.0"
structopt = "0.2.15"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.1"

[dev-dependencies]
predicates = "0.5.0"
assert_cmd = "0.4"
tempfile = "3.0.2"

[features]
vendored-openssl = ['openssl/vendored']

[[bin]]
path = "src/main.rs"
name = "cargo-generate"
